--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -1,5 +1,19 @@
 .card {
-    img {
-        max-width: 300px;
+    .preview {
+        width: 200px;
+        transition: width 0.5s ease-in-out;
+
+        .preview--img {
+            object-fit: contain;
+        }
     }
+
+    .preview-wrap {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+.card:hover .preview{
+    width: 300px;
 }
